...
      body: Padding(
        padding: const EdgeInsets.all(16.0),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            TextField(
              key: const Key('query_input'),
              onChanged: (query) {
                context.read<MovieSearchBloc>().add(OnMovieQueryChanged(query));
              },
              onSubmitted: (query) {
                context.read<MovieSearchBloc>().add(OnMovieQueryChanged(query));
              },
...
                prefixIcon: Icon(Icons.search),
                border: OutlineInputBorder(),
              ),
              textInputAction: TextInputAction.search,
            ),
            const SizedBox(height: 16),
            Text('Search Result', style: kHeading6),
            BlocBuilder<MovieSearchBloc, MovieListState>(
              builder: (context, state) {
                return switch (state) {
                  MovieListLoading() => const Expanded(
                    child: Center(child: CircularProgressIndicator()),
                  ),
...
