...
    return Scaffold(
      drawer: const AppDrawer(currentRoute: AppRoutes.homeMovie),
      appBar: AppBar(
        title: const Text('Ditonton'),
        actions: [
          IconButton(
            key: const Key('search_movie_button'),
            onPressed: () {
              Navigator.pushNamed(context, AppRoutes.searchMovies);
            },
            icon: const Icon(Icons.search),
          ),
        ],
...
      body: Padding(
        padding: const EdgeInsets.all(8.0),
        child: SingleChildScrollView(
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              Text('Now Playing', style: kHeading6),
              BlocBuilder<NowPlayingMoviesBloc, MovieListState>(
                builder: (context, state) => _buildSection(state),
              ),
              SubHeading(
                title: 'Popular',
                onTap: () =>
...
