...
    return Scaffold(
      drawer: const AppDrawer(currentRoute: AppRoutes.homeTvSeries),
      appBar: AppBar(
        title: const Text('TV Series'),
        actions: [
          IconButton(
            key: const Key('search_tv_series_button'),
            onPressed: () {
              Navigator.pushNamed(context, AppRoutes.searchTvSeries);
            },
            icon: const Icon(Icons.search),
          ),
        ],
...
        padding: const EdgeInsets.all(8.0),
        child: SingleChildScrollView(
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              SubHeading(
                title: 'On The Air',
                onTap: () =>
                    Navigator.pushNamed(context, AppRoutes.onTheAirTvSeries),
              ),
              BlocBuilder<OnTheAirTvSeriesBloc, TvSeriesListState>(
                builder: (context, state) => _buildSection(state),
              ),
...
